deployment-app/backend-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app 
spec:
  replicas: 1
  selector:
    matchLabels:
      name: backend-app
      io.kompose.network/app-network: "true"
  template:
    metadata:
      labels:
        name: backend-app
        io.kompose.network/app-network: "true"
    spec:
      containers:
        - args:
            - npm
            - run
            - server
          image: 781017761620.dkr.ecr.us-east-1.amazonaws.com/mern-repo:backend-build-18
          name: backend-app
          imagePullPolicy: Always
          resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
        ports:
        - containerPort: 5000 
      imagePullSecrets:
          - name: regcred
