deployment-app/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-app
spec:
  selector:
    app: backend-app
    io.kompose.network/app-network: "true"
  ports:
  -  port: 5000
     targetPort: 5000
