deployment-app/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app
spec:
  selector:
    app: frontend-app
    io.kompose.network/app-network: "true"
  ports:
  - port: 3000
    targetPort: 3000
